Performance improvements and configurability - clearly identify asynchronous stages and use configurable and injectable executors for each of them (deserialization, processing, serialization) - default executors for processing/sending use throttling - stream processing now parallelizable, per stream - Sender and Receiver are now interfaces, part of the base API - SenderImpl and ReceiverImpl are default implementations in s4-core - simplified regression tests for communication protocols